--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ h2{
     color: #fafafa;
     grid-area: title;
     text-align: center;
-    text-align: end;
+    
     margin: .5rem;
     padding: .5rem;
     align-self: flex-end;
@@ -321,6 +321,17 @@ h2{
     body {
         background-color: #005A5E;
     }
+    nav {
+        font-size: medium;
+        background-color: #d1cfcf;
+        padding-top: .5rem;
+        padding-bottom: .5rem;
+        justify-content: center;
+        flex: auto;
+        display: flex;
+    
+    
+    }
 }
 
 @media screen and (max-width: 780px) {
@@ -332,6 +343,20 @@ h2{
         width: auto;
        
     }
+    nav {
+        font-size: medium;
+        background-color: #d1cfcf;
+        padding-top: .5rem;
+        padding-bottom: .5rem;
+        justify-content: center;
+        flex: auto;
+        display: flex;
+    
+    
+    }
+
+   
+    
 }
 
 @media screen and (max-width: 480px) {
@@ -342,4 +367,69 @@ h2{
         width: auto;
         
     }
+    nav {
+        font-size: medium;
+        background-color: #d1cfcf;
+        padding-top: .5rem;
+        padding-bottom: .5rem;
+        justify-content: center;
+        flex: auto;
+        display:inline-block;
+    
+    
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: min-content min-content min-content min-content;
+        grid-template-areas:
+            "... title    title ..."
+            "... texto    texto ..."
+            "... img1    img1..."
+            "... img2    img2..."
+    
+    }
+
+    .grid-texto {
+        grid-area: texto;
+        color: #fafafa;  
+        padding: 0%;      
+        text-align:justify;
+        
+    
+    
+    }
+
+    .grid-img1 {
+        grid-area: img1;
+        overflow: auto;
+        padding: .1rem;
+        margin: .1rem;
+        align-self: center;
+        border-radius: 10px;
+        align-items: center;
+    }
+    
+    .grid-img2 {
+        grid-area: img2;
+        overflow: auto;
+        align-self: center;
+        margin: .1rem;
+        border-radius: 10px;
+       align-items: center;
+    
+    }
+    
+    .grid-title {
+        color: #fafafa;
+        grid-area: title;
+        text-align: center;
+        margin: .1rem;
+        padding: .1rem;
+        align-self: flex-end;
+        text-shadow: #7c7b7b;
+    
+    }
+  
 }
