--- a/style.css
+++ b/style.css
@@ -35,14 +35,13 @@ section {
 
 .img-logo {
     padding: 1rem;
-    justify-content: center;
+    justify-content: right;
     display: flex;
-    overflow: auto;
-    transform: none;
+       
     
 }
 
-div {
+.contact {
     background-color: #005A5E;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -53,32 +52,16 @@ div {
 }
 
 
-
-nav {
-    font-size:large;
-  
-    justify-content: center;
-    flex: auto;
-    display: flex;
+.nav-link{
+    color:#fafafa;
     
-
-
-}
-.nav-item{
-    margin: 1rem;
-    padding: 1rem;
-    background-color: #7c7b7b;
-    border-radius: 20px;
 }
 
-.d-flex{
-   
-    justify-content: left;
-   display: flex;
-    margin: 3rem;
-    padding: 3rem;
-   
+.nav-link:hover{
+    color: #7c7b7b;
 }
+
+
 
 ul {
     list-style-type: none;
@@ -214,11 +197,33 @@ footer {
     flex-direction: column;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
 }
 
+.caja-mapa{
+    flex-wrap:nowrap;
+    align-items: center;
+}
 
+.mapita{
+    border-radius: 20px;
+    box-shadow: 0px 6px 12px -1px  cornsilk;
+}
 
+.texto-mapa{
+    width: 30%;
+    color:#fafafa;
+    text-align: justify;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.title-mapa{
+    color: #fafafa;
+    margin: 1rem;
+    padding: 1rem;
+}
 h5 {
     color: #ffffff;
     margin: .5rem;
@@ -534,16 +539,38 @@ h2 {
 
     }
 
+    .img-logo {
+        overflow: auto;
+        justify-content: center;
+        
+       
+        
+    }
+
     nav {
-        font-size: medium;
-        background-color: #d1cfcf;
-        padding-top: .5rem;
-        padding-bottom: .5rem;
+        font-size:large;
+      
         justify-content: center;
         flex: auto;
-        display: inline-block;
-
-
+        display: flex;
+        
+    
+    
+    }
+    .nav-item{
+        margin: 1rem;
+        padding: 1rem;
+        background-color: #7c7b7b;
+        border-radius: 20px;
+    }
+    
+    .d-flex{
+       
+        justify-content: center;
+       display: none;
+        margin: 3rem;
+        padding: 3rem;
+       
     }
 
     .grid {
