--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,7 @@ section {
 
 
 .img-logo {
+    color: #fafafa;
     padding: 1rem;
     justify-content: right;
     display: flex;
@@ -41,6 +42,13 @@ section {
 
 }
 
+.img-logo:hover{
+    color:#fafafa;
+    display: inline-block;
+    color: #5f5e5e;
+  
+transition: .5;
+}
 .contact {
     background-color: #005A5E;
     padding-top: 1rem;
@@ -188,12 +196,14 @@ footer {
 }
 
 .card {
-    background-color: #005A5E;
+    background-color: #555454;
+
+
     width: 30%;
     height: 30%;
     padding: .5rem;
     margin: 1rem;
-    border-radius: 5px;
+    border-radius: 10px;
     flex-direction: column;
     display: flex;
     align-items: center;
@@ -251,6 +261,7 @@ h5 {
 .card img:hover {
     flex-wrap: wrap;
     transform: scale(.9);
+
     flex: auto;
 
 }
@@ -281,6 +292,8 @@ h2 {
         "title    img1 "
         "texto    img2 "
         "img2a    img1a "
+        "img2a    img1a "
+        "title4    texto4"
 
 }
 
@@ -343,6 +356,30 @@ h2 {
     margin: 4rem;
     border-radius: 10px;
 
+
+}
+
+.grid-title4{
+    color: #fafafa;
+    grid-area: title4;
+    text-align: center;
+
+    margin: .1rem;
+    padding: .2rem;
+    align-self: center;
+    text-shadow: #7c7b7b;
+
+}
+
+.grid-texto4{   
+        grid-area: texto4;
+        color: #fafafa;
+        margin: 5rem;
+        padding: 5rem;
+        text-align: justify;
+        align-self: center;
+    
+    
 
 }
 
@@ -431,6 +468,9 @@ h2 {
 
 }
 
+.preguntas {
+    flex-wrap: wrap;
+}
 
 
 @media screen and (max-width: 1200px) {
@@ -441,214 +481,215 @@ h2 {
 
 }
 
-    @media screen and (max-width: 780px) {
-        body {
-            color: #005A5E;
-            overflow: auto;
-        }
+@media screen and (max-width: 780px) {
+    body {
+        color: #005A5E;
+        overflow: auto;
+    }
 
-        iframe {
-            width: auto;
+    iframe {
+        width: auto;
 
-        }
-
-    
-
-        .grid {
-            display: grid;
-            grid-template-columns: 25% 25% 25% 25%;
-            grid-template-rows: min-content min-content min-content min-content;
-            grid-template-areas:
-                "... title    title ..."
-                "... texto    texto ..."
-                "img1 ...     img2 ..."
-                "img1 ...    img2  ..."
-
-        }
-
-        .grid-texto {
-            grid-area: texto;
-            color: #fafafa;
-            padding: 0%;
-            text-align: justify;
+    }
 
 
 
-        }
+    .grid {
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: min-content min-content min-content min-content;
+        grid-template-areas:
+            "... title    title ..."
+            "... texto    texto ..."
+            "img1 ...     img2 ..."
+            "img1 ...    img2  ..."
 
-        .grid-img1 {
-            grid-area: img1;
-         
-            padding: .1rem;
-            margin: 2rem;
-            align-self: center;
-            border-radius: 10px;
-            align-items: center;
-        }
+    }
 
-        .grid-img2 {
-            grid-area: img2;
-            
-            align-self: center;
-            margin: 5rem;
-            border-radius: 10px;
-            align-items: center;
-
-        }
-
-        .grid-title {
-            color: #fafafa;
-            grid-area: title;
-            text-align: center;
-            margin: .1rem;
-            padding: .1rem;
-            align-self: flex-end;
-            text-shadow: #7c7b7b;
-
-        }
+    .grid-texto {
+        grid-area: texto;
+        color: #fafafa;
+        padding: 0%;
+        text-align: justify;
 
 
 
     }
 
-    @media screen and (max-width: 480px) {
-        body {
-            color: #005A5E;
-            overflow: auto;
-        }
+    .grid-img1 {
+        grid-area: img1;
 
-        .grid {
-            display: grid;
-            grid-template-columns: 100%;
-            grid-template-rows: min-content min-content min-content min-content;
-            grid-template-areas:
-                "title"
-                "texto"
-                "img1"
-                "img2"
+        padding: .1rem;
+        margin: 2rem;
+        align-self: center;
+        border-radius: 10px;
+        align-items: center;
+    }
 
-        }
-section .grid {
-    flex-wrap: wrap;
-}
+    .grid-img2 {
+        grid-area: img2;
 
-.grid-title{
+        align-self: center;
+        margin: 5rem;
+        border-radius: 10px;
+        align-items: center;
 
-width: 100%;
-margin: 5rem;
+    }
 
-}
+    .grid-title {
+        color: #fafafa;
+        grid-area: title;
+        text-align: center;
+        margin: .1rem;
+        padding: .1rem;
+        align-self: flex-end;
+        text-shadow: #7c7b7b;
 
-.grid-texto{
-    width: 100%;
-    
-   margin: 4rem;
-   padding:2rem;
-   justify-content: center;
+    }
+
 
 
 }
 
-.grid-img1{
-    flex-wrap: wrap;
-    margin: 6rem;
-    
+@media screen and (max-width: 480px) {
+    body {
+        color: #005A5E;
+        overflow: auto;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: min-content min-content min-content min-content;
+        grid-template-areas:
+            "title"
+            "texto"
+            "img1"
+            "img2"
+
+    }
+
+    section .grid {
+        flex-wrap: wrap;
+    }
+
+    .grid-title {
+
+        width: 100%;
+        margin: 5rem;
+
+    }
+
+    .grid-texto {
+        width: 100%;
+
+        margin: 4rem;
+        padding: 2rem;
+        justify-content: center;
+
+
+    }
+
+    .grid-img1 {
+        flex-wrap: wrap;
+        margin: 6rem;
+
+    }
+
+    .grid-img2 {
+        flex-wrap: wrap;
+        margin: 6rem;
+
+    }
+
+
+    .grid2 {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: min-content min-content min-content min-content min-content min-content;
+        grid-template-areas:
+            "title2 "
+            "video "
+            "texto2 "
+            "title3"
+            "img3 "
+            "texto3 "
+            "img4   "
+            "img5 ";
+    }
+
+    section .grid2 {
+        flex-wrap: wrap;
+    }
+
+    .grid-title2 {
+        color: #fafafa;
+        grid-area: title2;
+        margin: .1rem;
+        padding: .2rem;
+        text-align: center;
+        align-self: auto;
+    }
+
+    .grid-texto2 {
+        grid-area: texto2;
+        color: #fafafa;
+        text-align: justify;
+        width: 100%;
+        margin: .1rem;
+        padding: 2rem;
+
+    }
+
+    .grid-title3 {
+
+        color: #fafafa;
+        grid-area: title3;
+        margin: 5rem;
+        padding: 5rem;
+        text-align: right;
+        align-self: auto;
+
+    }
+
+    .grid-texto3 {
+        grid-area: texto3;
+        color: #fafafa;
+        text-align: justify;
+        margin: 2rem;
+        padding: 2rem;
+    }
+
+    .grid-video {
+        grid-area: video;
+        justify-content: right;
+        margin: auto;
+        padding: 0%;
+        display: block;
+
+
+    }
+
+    .grid-img3 {
+        grid-area: img3;
+        margin: auto;
+        padding: 1rem;
+
+    }
+
+    .grid-img4 {
+        grid-area: img4;
+        margin: auto;
+        padding: 1rem;
+
+    }
+
+    .grid-img5 {
+        grid-area: img5;
+        margin: auto;
+        padding: 1rem;
+
+    }
+
+
 }
-
-.grid-img2{
-    flex-wrap: wrap;
-    margin:6rem;
-    
-}
-
-
-.grid2 {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: min-content min-content min-content min-content min-content min-content;
-    grid-template-areas:
-        "title2 "
-        "video "
-        "texto2 "
-        "title3"        
-        "img3 "   
-        "texto3 "
-        "img4   "
-        "img5 ";
-}
-
-section .grid2 {
-    flex-wrap: wrap;
-}
-
-.grid-title2 {
-    color: #fafafa;
-    grid-area: title2;
-    margin: .1rem;
-    padding: .2rem;
-    text-align: center;
-    align-self: auto;
-}
-
-.grid-texto2 {
-    grid-area: texto2;
-    color: #fafafa;
-    text-align: justify;
-    width: 100%;
-    margin: .1rem;
-    padding: 2rem;
-
-}
-
-.grid-title3 {
-
-    color: #fafafa;
-    grid-area: title3;
-    margin: 5rem;
-    padding: 5rem;
-    text-align: right;
-    align-self: auto;
-
-}
-
-.grid-texto3 {
-    grid-area: texto3;
-    color: #fafafa;
-    text-align: justify;
-    margin: 2rem;
-    padding: 2rem;
-}
-
-.grid-video {
-    grid-area: video;
-    justify-content: right;
-    margin: auto;
-    padding: 0%;
-    display: block;
-
-
-}
-
-.grid-img3 {
-    grid-area: img3;
-    margin: auto;
-    padding: 1rem;
-
-}
-
-.grid-img4 {
-    grid-area: img4;
-    margin: auto;
-    padding: 1rem;
-
-}
-
-.grid-img5 {
-    grid-area: img5;
-    margin: auto;
-    padding: 1rem;
-
-}
-
-
-}   
